# markwatch

./: Cargo.toml  README.md  watch-docker-compose.sh  watch-markcompose.sh
.github/workflows/: distribution.yml
distribution/: README.md
distribution/linux/: markwatch.env  markwatch.service  mdwatch.env  mdwatch.service  package-deb.sh  package-tar.sh  watch-docker-compose.sh  watch-markcompose.sh
distribution/windows/: package-zip.ps1  watch-docker-compose.ps1  watch-markcompose.ps1
src/: main.rs
