[package]
name = "markwatch"
version = "0.1.0"
edition = "2024"
description = "Markdown watcher with content-aware trigger rules for Hugo build pipelines"
license = "MIT"
authors = ["markwatch contributors"]

[dependencies]
notify = "6.1.1"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[package.metadata.deb]
maintainer = "markwatch contributors"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  ["target/release/markwatch", "usr/bin/markwatch", "755"],
  ["distribution/linux/watch-markcompose.sh", "usr/lib/markwatch/watch-markcompose.sh", "755"],
  ["distribution/linux/markwatch.service", "lib/systemd/system/markwatch.service", "644"],
  ["distribution/linux/markwatch.env", "etc/default/markwatch", "644"],
]
conf-files = ["/etc/default/markwatch"]
